Reformat Jupyter notebook JSON

--- a/examples/codestral-code-interpreter-python/codestral_code_interpreter.ipynb
+++ b/examples/codestral-code-interpreter-python/codestral_code_interpreter.ipynb
@@ -71,7 +71,9 @@
           ]
         }
       ],
-      "source": ["%pip install mistralai e2b_code_interpreter"]
+      "source": [
+        "%pip install mistralai e2b_code_interpreter"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -89,7 +91,45 @@
         "id": "HnxngrHnWlV8"
       },
       "outputs": [],
-      "source": ["# TODO: Get your Mistral API key from https://console.mistral.ai\nMISTRAL_API_KEY = \"\"\n\n# TODO: Get your E2B API key from https://e2b.dev/docs\nE2B_API_KEY = \"\"\n\nMODEL_NAME = \"codestral-latest\"\n\nSYSTEM_PROMPT = \"\"\"You're a python data scientist that is analyzing daily temperature of major cities. You are given tasks to complete and you run Python code to solve them.\n\nInformation about the temperature dataset:\n- It's in the `/home/user/city_temperature.csv` file\n- The CSV file is using `,` as the delimiter\n- It has following columns (examples included):\n  - `Region`: \"North America\", \"Europe\"\n  - `Country`: \"Iceland\"\n  - `State`: for example \"Texas\" but can also be null\n  - `City`: \"Prague\"\n  - `Month`: \"June\"\n  - `Day`: 1-31\n  - `Year`: 2002\n  - `AvgTemperature`: temperature in Celsius, for example 24\n\nGenerally, you follow these rules:\n- ALWAYS FORMAT YOUR RESPONSE IN MARKDOWN\n- ALWAYS RESPOND ONLY WITH CODE IN CODE BLOCK LIKE THIS:\n```python\n{code}\n```\n- the python code runs in jupyter notebook.\n- every time you generate python, the code is executed in a separate cell. it's okay to multiple calls to `execute_python`.\n- display visualizations using matplotlib or any other visualization library directly in the notebook. don't worry about saving the visualizations to a file.\n- you have access to the internet and can make api requests.\n- you also have access to the filesystem and can read/write files.\n- you can install any pip package (if it exists) if you need to be running `!pip install {package}`. The usual packages for data analysis are already preinstalled though.\n- you can run any python code you want, everything is running in a secure sandbox environment\n\"\"\""]
+      "source": [
+        "# TODO: Get your Mistral API key from https://console.mistral.ai\n",
+        "MISTRAL_API_KEY = \"\"\n",
+        "\n",
+        "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
+        "E2B_API_KEY = \"\"\n",
+        "\n",
+        "MODEL_NAME = \"codestral-latest\"\n",
+        "\n",
+        "SYSTEM_PROMPT = \"\"\"You're a python data scientist that is analyzing daily temperature of major cities. You are given tasks to complete and you run Python code to solve them.\n",
+        "\n",
+        "Information about the temperature dataset:\n",
+        "- It's in the `/home/user/city_temperature.csv` file\n",
+        "- The CSV file is using `,` as the delimiter\n",
+        "- It has following columns (examples included):\n",
+        "  - `Region`: \"North America\", \"Europe\"\n",
+        "  - `Country`: \"Iceland\"\n",
+        "  - `State`: for example \"Texas\" but can also be null\n",
+        "  - `City`: \"Prague\"\n",
+        "  - `Month`: \"June\"\n",
+        "  - `Day`: 1-31\n",
+        "  - `Year`: 2002\n",
+        "  - `AvgTemperature`: temperature in Celsius, for example 24\n",
+        "\n",
+        "Generally, you follow these rules:\n",
+        "- ALWAYS FORMAT YOUR RESPONSE IN MARKDOWN\n",
+        "- ALWAYS RESPOND ONLY WITH CODE IN CODE BLOCK LIKE THIS:\n",
+        "```python\n",
+        "{code}\n",
+        "```\n",
+        "- the python code runs in jupyter notebook.\n",
+        "- every time you generate python, the code is executed in a separate cell. it's okay to multiple calls to `execute_python`.\n",
+        "- display visualizations using matplotlib or any other visualization library directly in the notebook. don't worry about saving the visualizations to a file.\n",
+        "- you have access to the internet and can make api requests.\n",
+        "- you also have access to the filesystem and can read/write files.\n",
+        "- you can install any pip package (if it exists) if you need to be running `!pip install {package}`. The usual packages for data analysis are already preinstalled though.\n",
+        "- you can run any python code you want, everything is running in a secure sandbox environment\n",
+        "\"\"\""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -107,7 +147,17 @@
         "id": "yVwSBPF1iHby"
       },
       "outputs": [],
-      "source": ["import re\npattern = re.compile(r'```python\\n(.*?)\\n```', re.DOTALL) # Match everything in between ```python and ```\ndef match_code_block(llm_response):\n  match = pattern.search(llm_response)\n  if match:\n    code = match.group(1)\n    print(code)\n    return code\n  return \"\""]
+      "source": [
+        "import re\n",
+        "pattern = re.compile(r'```python\\n(.*?)\\n```', re.DOTALL) # Match everything in between ```python and ```\n",
+        "def match_code_block(llm_response):\n",
+        "  match = pattern.search(llm_response)\n",
+        "  if match:\n",
+        "    code = match.group(1)\n",
+        "    print(code)\n",
+        "    return code\n",
+        "  return \"\""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -125,7 +175,22 @@
         "id": "knZ-_2qtXkqM"
       },
       "outputs": [],
-      "source": ["def code_interpret(e2b_code_interpreter, code):\n  print(\"Running code interpreter...\")\n  exec = e2b_code_interpreter.notebook.exec_cell(\n    code,\n    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n    # You can also stream code execution results\n    # on_result=...\n  )\n\n  if exec.error:\n    print(\"[Code Interpreter ERROR]\", exec.error)\n  else:\n    return exec.results"]
+      "source": [
+        "def code_interpret(e2b_code_interpreter, code):\n",
+        "  print(\"Running code interpreter...\")\n",
+        "  exec = e2b_code_interpreter.notebook.exec_cell(\n",
+        "    code,\n",
+        "    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
+        "    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n",
+        "    # You can also stream code execution results\n",
+        "    # on_result=...\n",
+        "  )\n",
+        "\n",
+        "  if exec.error:\n",
+        "    print(\"[Code Interpreter ERROR]\", exec.error)\n",
+        "  else:\n",
+        "    return exec.results"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -143,7 +208,33 @@
         "id": "udfl9vKoXnBn"
       },
       "outputs": [],
-      "source": ["from mistralai.client import MistralClient\n\nclient = MistralClient(api_key=MISTRAL_API_KEY)\n\ndef chat(e2b_code_interpreter, user_message):\n  print(f\"\\n{'='*50}\\nUser message: {user_message}\\n{'='*50}\")\n\n  messages = [\n      {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n      {\"role\": \"user\", \"content\": user_message}\n  ]\n\n  # Codestral doesn't support tools/function calling yet\n  response = client.chat(\n      model=MODEL_NAME,\n      messages=messages,\n  )\n  response_message = response.choices[0].message\n  python_code = match_code_block(response_message.content)\n  if python_code != \"\":\n    code_interpreter_results = code_interpret(e2b_code_interpreter, python_code)\n    return code_interpreter_results\n  else:\n    print(f\"Failed to match any Python code in model's response {response_message}\")\n    return[]"]
+      "source": [
+        "from mistralai.client import MistralClient\n",
+        "\n",
+        "client = MistralClient(api_key=MISTRAL_API_KEY)\n",
+        "\n",
+        "def chat(e2b_code_interpreter, user_message):\n",
+        "  print(f\"\\n{'='*50}\\nUser message: {user_message}\\n{'='*50}\")\n",
+        "\n",
+        "  messages = [\n",
+        "      {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
+        "      {\"role\": \"user\", \"content\": user_message}\n",
+        "  ]\n",
+        "\n",
+        "  # Codestral doesn't support tools/function calling yet\n",
+        "  response = client.chat(\n",
+        "      model=MODEL_NAME,\n",
+        "      messages=messages,\n",
+        "  )\n",
+        "  response_message = response.choices[0].message\n",
+        "  python_code = match_code_block(response_message.content)\n",
+        "  if python_code != \"\":\n",
+        "    code_interpreter_results = code_interpret(e2b_code_interpreter, python_code)\n",
+        "    return code_interpreter_results\n",
+        "  else:\n",
+        "    print(f\"Failed to match any Python code in model's response {response_message}\")\n",
+        "    return[]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -163,7 +254,13 @@
         "id": "29lU13cQkg36"
       },
       "outputs": [],
-      "source": ["def upload_dataset(code_interpreter):\n  print(\"Uploading dataset to Code Interpreter sandbox...\")\n  with open(\"./city_temperature.csv\", \"rb\") as f:\n    remote_path = code_interpreter.files.write(f)\n  print(\"Uploaded at\", remote_path)"]
+      "source": [
+        "def upload_dataset(code_interpreter):\n",
+        "  print(\"Uploading dataset to Code Interpreter sandbox...\")\n",
+        "  with open(\"./city_temperature.csv\", \"rb\") as f:\n",
+        "    remote_path = code_interpreter.files.write(f)\n",
+        "  print(\"Uploaded at\", remote_path)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -238,7 +335,31 @@
           "output_type": "execute_result"
         }
       ],
-      "source": ["from e2b_code_interpreter import CodeInterpreter\n\nwith CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n  # Upload the dataset to the code interpreter sandbox\n  upload_dataset(code_interpreter)\n\n  code_results = chat(\n    code_interpreter,\n    \"Plot average temperature over the years in Algeria\"\n  )\n  if code_results:\n    first_result = code_results[0]\n  else:\n    raise Exception(\"No code interpreter results\")\n\n\n# This will render the image\n# You can also access the data directly\n# first_result.png\n# first_result.jpg\n# first_result.pdf\n# ...\nfirst_result"]
+      "source": [
+        "from e2b_code_interpreter import CodeInterpreter\n",
+        "\n",
+        "with CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n",
+        "  # Upload the dataset to the code interpreter sandbox\n",
+        "  upload_dataset(code_interpreter)\n",
+        "\n",
+        "  code_results = chat(\n",
+        "    code_interpreter,\n",
+        "    \"Plot average temperature over the years in Algeria\"\n",
+        "  )\n",
+        "  if code_results:\n",
+        "    first_result = code_results[0]\n",
+        "  else:\n",
+        "    raise Exception(\"No code interpreter results\")\n",
+        "\n",
+        "\n",
+        "# This will render the image\n",
+        "# You can also access the data directly\n",
+        "# first_result.png\n",
+        "# first_result.jpg\n",
+        "# first_result.pdf\n",
+        "# ...\n",
+        "first_result"
+      ]
     }
   ],
   "metadata": {
