--- a/examples/langchain-python/langchain_code_interpreter.ipynb
+++ b/examples/langchain-python/langchain_code_interpreter.ipynb
@@ -87,7 +87,9 @@
      ]
     }
    ],
-   "source": ["%pip install e2b-code-interpreter langchain langchainhub langchain-openai"]
+   "source": [
+    "%pip install e2b-code-interpreter langchain langchainhub langchain-openai"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +105,15 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": ["import os\n\n# TODO: Get your OpenAI API key from https://platform.openai.com/api-keys\nos.environ[\"OPENAI_API_KEY\"] = \"\"\n\n# TODO: Get your E2B API key from https://e2b.dev/docs\nos.environ[\"E2B_API_KEY\"] = \"\""]
+   "source": [
+    "import os\n",
+    "\n",
+    "# TODO: Get your OpenAI API key from https://platform.openai.com/api-keys\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+    "\n",
+    "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
+    "os.environ[\"E2B_API_KEY\"] = \"\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,7 +129,88 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": ["import os\nimport json\n\nfrom typing import Any, List\nfrom langchain_core.tools import Tool\nfrom pydantic.v1 import BaseModel, Field\nfrom e2b_code_interpreter import CodeInterpreter\nfrom langchain_core.messages import BaseMessage, ToolMessage\nfrom langchain.agents.output_parsers.tools import (\n    ToolAgentAction,\n)\n\n\nclass LangchainCodeInterpreterToolInput(BaseModel):\n    code: str = Field(description=\"Python code to execute.\")\n\n\nclass CodeInterpreterFunctionTool:\n    \"\"\"\n    This class calls arbitrary code against a Python Jupyter notebook.\n    It requires an E2B_API_KEY to create a sandbox.\n    \"\"\"\n\n    tool_name: str = \"code_interpreter\"\n\n    def __init__(self):\n        # Instantiate the E2B sandbox - this is a long lived object\n        # that's pinging E2B cloud to keep the sandbox alive.\n        if \"E2B_API_KEY\" not in os.environ:\n            raise Exception(\n                \"Code Interpreter tool called while E2B_API_KEY environment variable is not set. Please get your E2B api key here https://e2b.dev/docs and set the E2B_API_KEY environment variable.\"\n            )\n        self.code_interpreter = CodeInterpreter()\n\n    def call(self, parameters: dict, **kwargs: Any):\n        code = parameters.get(\"code\", \"\")\n        print(f\"***Code Interpreting...\\n{code}\\n====\")\n        execution = self.code_interpreter.notebook.exec_cell(code)\n        return {\n            \"results\": execution.results,\n            \"stdout\": execution.logs.stdout,\n            \"stderr\": execution.logs.stderr,\n            \"error\": execution.error,\n        }\n\n    def close(self):\n        self.code_interpreter.kill()\n\n    # langchain does not return a dict as a parameter, only a code string\n    def langchain_call(self, code: str):\n        return self.call({\"code\": code})\n\n    def to_langchain_tool(self) -> Tool:\n        tool = Tool(\n            name=self.tool_name,\n            description=\"Execute python code in a Jupyter notebook cell and returns any rich data (eg charts), stdout, stderr, and error.\",\n            func=self.langchain_call,\n        )\n        tool.args_schema = LangchainCodeInterpreterToolInput\n        return tool\n\n    @staticmethod\n    def format_to_tool_message(\n        agent_action: ToolAgentAction,\n        observation: dict,\n    ) -> List[BaseMessage]:\n        \"\"\"\n        Format the output of the CodeInterpreter tool to be returned as a ToolMessage.\n        \"\"\"\n        new_messages = list(agent_action.message_log)\n\n        # TODO: Add info about the results for the LLM\n        content = json.dumps(\n            {k: v for k, v in observation.items() if k not in (\"results\")}, indent=2\n        )\n        new_messages.append(\n            ToolMessage(content=content, tool_call_id=agent_action.tool_call_id)\n        )\n\n        return new_messages"]
+   "source": [
+    "import os\n",
+    "import json\n",
+    "\n",
+    "from typing import Any, List\n",
+    "from langchain_core.tools import Tool\n",
+    "from pydantic.v1 import BaseModel, Field\n",
+    "from e2b_code_interpreter import CodeInterpreter\n",
+    "from langchain_core.messages import BaseMessage, ToolMessage\n",
+    "from langchain.agents.output_parsers.tools import (\n",
+    "    ToolAgentAction,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "class LangchainCodeInterpreterToolInput(BaseModel):\n",
+    "    code: str = Field(description=\"Python code to execute.\")\n",
+    "\n",
+    "\n",
+    "class CodeInterpreterFunctionTool:\n",
+    "    \"\"\"\n",
+    "    This class calls arbitrary code against a Python Jupyter notebook.\n",
+    "    It requires an E2B_API_KEY to create a sandbox.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    tool_name: str = \"code_interpreter\"\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        # Instantiate the E2B sandbox - this is a long lived object\n",
+    "        # that's pinging E2B cloud to keep the sandbox alive.\n",
+    "        if \"E2B_API_KEY\" not in os.environ:\n",
+    "            raise Exception(\n",
+    "                \"Code Interpreter tool called while E2B_API_KEY environment variable is not set. Please get your E2B api key here https://e2b.dev/docs and set the E2B_API_KEY environment variable.\"\n",
+    "            )\n",
+    "        self.code_interpreter = CodeInterpreter()\n",
+    "\n",
+    "    def call(self, parameters: dict, **kwargs: Any):\n",
+    "        code = parameters.get(\"code\", \"\")\n",
+    "        print(f\"***Code Interpreting...\\n{code}\\n====\")\n",
+    "        execution = self.code_interpreter.notebook.exec_cell(code)\n",
+    "        return {\n",
+    "            \"results\": execution.results,\n",
+    "            \"stdout\": execution.logs.stdout,\n",
+    "            \"stderr\": execution.logs.stderr,\n",
+    "            \"error\": execution.error,\n",
+    "        }\n",
+    "\n",
+    "    def close(self):\n",
+    "        self.code_interpreter.kill()\n",
+    "\n",
+    "    # langchain does not return a dict as a parameter, only a code string\n",
+    "    def langchain_call(self, code: str):\n",
+    "        return self.call({\"code\": code})\n",
+    "\n",
+    "    def to_langchain_tool(self) -> Tool:\n",
+    "        tool = Tool(\n",
+    "            name=self.tool_name,\n",
+    "            description=\"Execute python code in a Jupyter notebook cell and returns any rich data (eg charts), stdout, stderr, and error.\",\n",
+    "            func=self.langchain_call,\n",
+    "        )\n",
+    "        tool.args_schema = LangchainCodeInterpreterToolInput\n",
+    "        return tool\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def format_to_tool_message(\n",
+    "        agent_action: ToolAgentAction,\n",
+    "        observation: dict,\n",
+    "    ) -> List[BaseMessage]:\n",
+    "        \"\"\"\n",
+    "        Format the output of the CodeInterpreter tool to be returned as a ToolMessage.\n",
+    "        \"\"\"\n",
+    "        new_messages = list(agent_action.message_log)\n",
+    "\n",
+    "        # TODO: Add info about the results for the LLM\n",
+    "        content = json.dumps(\n",
+    "            {k: v for k, v in observation.items() if k not in (\"results\")}, indent=2\n",
+    "        )\n",
+    "        new_messages.append(\n",
+    "            ToolMessage(content=content, tool_call_id=agent_action.tool_call_id)\n",
+    "        )\n",
+    "\n",
+    "        return new_messages"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,7 +266,75 @@
      "output_type": "execute_result"
     }
    ],
-   "source": ["from typing import List, Sequence, Tuple\nfrom langchain_core.prompts import ChatPromptTemplate\nfrom langchain.agents import AgentExecutor\nfrom langchain_openai import ChatOpenAI\nfrom langchain_core.messages import BaseMessage\nfrom langchain_core.runnables import RunnablePassthrough\nfrom langchain.agents.output_parsers.tools import (\n    ToolAgentAction,\n    ToolsAgentOutputParser,\n)\n\ndef format_to_tool_messages(\n    intermediate_steps: Sequence[Tuple[ToolAgentAction, dict]],\n) -> List[BaseMessage]:\n    messages = []\n    for agent_action, observation in intermediate_steps:\n        if agent_action.tool == CodeInterpreterFunctionTool.tool_name:\n            new_messages = CodeInterpreterFunctionTool.format_to_tool_message(\n                agent_action,\n                observation,\n            )\n            messages.extend([new for new in new_messages if new not in messages])\n        else:\n            # Handle other tools\n            print(\"Not handling tool: \", agent_action.tool)\n\n    return messages\n\n\n# 1. Pick your favorite llm\nllm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)\n\n# 2. Initialize the code interpreter tool\ncode_interpreter = CodeInterpreterFunctionTool()\ncode_interpreter_tool = code_interpreter.to_langchain_tool()\ntools = [code_interpreter_tool]\n\n\n# 3. Define the prompt\nprompt = ChatPromptTemplate.from_messages(\n    [(\"human\", \"{input}\"), (\"placeholder\", \"{agent_scratchpad}\")]\n)\n\n# 4. Define the agent\nagent = (\n    RunnablePassthrough.assign(\n        agent_scratchpad=lambda x: format_to_tool_messages(x[\"intermediate_steps\"])\n    )\n    | prompt\n    | llm.bind_tools(tools)\n    | ToolsAgentOutputParser()\n)\n\nagent_executor = AgentExecutor(\n    agent=agent,\n    tools=tools,\n    verbose=True,\n    return_intermediate_steps=True,\n)\n\n# 5. Invoke the agent\nresult = agent_executor.invoke({\"input\": \"plot and show sinus\"})\n\ncode_interpreter.kill()\n\n# Each intermediate step is a Tuple[ToolAgentAction, dict]\nresult[\"intermediate_steps\"][0][1][\"results\"][0]"]
+   "source": [
+    "from typing import List, Sequence, Tuple\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain.agents import AgentExecutor\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_core.messages import BaseMessage\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain.agents.output_parsers.tools import (\n",
+    "    ToolAgentAction,\n",
+    "    ToolsAgentOutputParser,\n",
+    ")\n",
+    "\n",
+    "def format_to_tool_messages(\n",
+    "    intermediate_steps: Sequence[Tuple[ToolAgentAction, dict]],\n",
+    ") -> List[BaseMessage]:\n",
+    "    messages = []\n",
+    "    for agent_action, observation in intermediate_steps:\n",
+    "        if agent_action.tool == CodeInterpreterFunctionTool.tool_name:\n",
+    "            new_messages = CodeInterpreterFunctionTool.format_to_tool_message(\n",
+    "                agent_action,\n",
+    "                observation,\n",
+    "            )\n",
+    "            messages.extend([new for new in new_messages if new not in messages])\n",
+    "        else:\n",
+    "            # Handle other tools\n",
+    "            print(\"Not handling tool: \", agent_action.tool)\n",
+    "\n",
+    "    return messages\n",
+    "\n",
+    "\n",
+    "# 1. Pick your favorite llm\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)\n",
+    "\n",
+    "# 2. Initialize the code interpreter tool\n",
+    "code_interpreter = CodeInterpreterFunctionTool()\n",
+    "code_interpreter_tool = code_interpreter.to_langchain_tool()\n",
+    "tools = [code_interpreter_tool]\n",
+    "\n",
+    "\n",
+    "# 3. Define the prompt\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [(\"human\", \"{input}\"), (\"placeholder\", \"{agent_scratchpad}\")]\n",
+    ")\n",
+    "\n",
+    "# 4. Define the agent\n",
+    "agent = (\n",
+    "    RunnablePassthrough.assign(\n",
+    "        agent_scratchpad=lambda x: format_to_tool_messages(x[\"intermediate_steps\"])\n",
+    "    )\n",
+    "    | prompt\n",
+    "    | llm.bind_tools(tools)\n",
+    "    | ToolsAgentOutputParser()\n",
+    ")\n",
+    "\n",
+    "agent_executor = AgentExecutor(\n",
+    "    agent=agent,\n",
+    "    tools=tools,\n",
+    "    verbose=True,\n",
+    "    return_intermediate_steps=True,\n",
+    ")\n",
+    "\n",
+    "# 5. Invoke the agent\n",
+    "result = agent_executor.invoke({\"input\": \"plot and show sinus\"})\n",
+    "\n",
+    "code_interpreter.kill()\n",
+    "\n",
+    "# Each intermediate step is a Tuple[ToolAgentAction, dict]\n",
+    "result[\"intermediate_steps\"][0][1][\"results\"][0]"
+   ]
   }
  ],
  "metadata": {
