--- a/examples/langgraph-python/langgraph_code_interpreter.ipynb
+++ b/examples/langgraph-python/langgraph_code_interpreter.ipynb
@@ -88,7 +88,9 @@
      ]
     }
    ],
-   "source": ["%pip install langgraph e2b-code-interpreter langchain langchainhub langchain-openai"]
+   "source": [
+    "%pip install langgraph e2b-code-interpreter langchain langchainhub langchain-openai"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,7 +106,15 @@
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": ["import os\n\n# TODO: Get your OpenAI API key from https://platform.openai.com/api-keys\nos.environ[\"OPENAI_API_KEY\"] = \"\"\n\n# TODO: Get your E2B API key from https://e2b.dev/docs\nos.environ[\"E2B_API_KEY\"] = \"\""]
+   "source": [
+    "import os\n",
+    "\n",
+    "# TODO: Get your OpenAI API key from https://platform.openai.com/api-keys\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+    "\n",
+    "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
+    "os.environ[\"E2B_API_KEY\"] = \"\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +130,88 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": ["import os\nimport json\n\nfrom typing import Any\nfrom langchain_core.tools import Tool\nfrom pydantic.v1 import BaseModel, Field\nfrom e2b_code_interpreter import CodeInterpreter\nfrom langchain_core.messages import ToolMessage\n\nclass RichToolMessage(ToolMessage):\n    raw_output: dict\n\n\nclass LangchainCodeInterpreterToolInput(BaseModel):\n    code: str = Field(description=\"Python code to execute.\")\n\n\nclass CodeInterpreterFunctionTool:\n    \"\"\"\n    This class calls arbitrary code against a Python Jupyter notebook.\n    It requires an E2B_API_KEY to create a sandbox.\n    \"\"\"\n\n    tool_name: str = \"code_interpreter\"\n\n    def __init__(self):\n        # Instantiate the E2B sandbox - this is a long lived object\n        # that's pinging E2B cloud to keep the sandbox alive.\n        if \"E2B_API_KEY\" not in os.environ:\n            raise Exception(\n                \"Code Interpreter tool called while E2B_API_KEY environment variable is not set. Please get your E2B api key here https://e2b.dev/docs and set the E2B_API_KEY environment variable.\"\n            )\n        self.code_interpreter = CodeInterpreter()\n\n    def close(self):\n        self.code_interpreter.kill()\n\n    def call(self, parameters: dict, **kwargs: Any):\n        code = parameters.get(\"code\", \"\")\n        print(f\"***Code Interpreting...\\n{code}\\n====\")\n        execution = self.code_interpreter.notebook.exec_cell(code)\n        return {\n            \"results\": execution.results,\n            \"stdout\": execution.logs.stdout,\n            \"stderr\": execution.logs.stderr,\n            \"error\": execution.error,\n        }\n\n    # langchain does not return a dict as a parameter, only a code string\n    def langchain_call(self, code: str):\n        return self.call({\"code\": code})\n\n    def to_langchain_tool(self) -> Tool:\n        tool = Tool(\n            name=self.tool_name,\n            description=\"Execute python code in a Jupyter notebook cell and returns any rich data (eg charts), stdout, stderr, and error.\",\n            func=self.langchain_call,\n        )\n        tool.args_schema = LangchainCodeInterpreterToolInput\n        return tool\n\n    @staticmethod\n    def format_to_tool_message(\n        tool_call_id: str,\n        output: dict,\n    ) -> RichToolMessage:\n        \"\"\"\n        Format the output of the CodeInterpreter tool to be returned as a RichToolMessage.\n        \"\"\"\n\n        # TODO: Add info about the results for the LLM\n        content = json.dumps(\n            {k: v for k, v in output.items() if k not in (\"results\")}, indent=2\n        )\n\n        return RichToolMessage(\n            content=content,\n            raw_output=output,\n            tool_call_id=tool_call_id,\n        )\n"]
+   "source": [
+    "import os\n",
+    "import json\n",
+    "\n",
+    "from typing import Any\n",
+    "from langchain_core.tools import Tool\n",
+    "from pydantic.v1 import BaseModel, Field\n",
+    "from e2b_code_interpreter import CodeInterpreter\n",
+    "from langchain_core.messages import ToolMessage\n",
+    "\n",
+    "class RichToolMessage(ToolMessage):\n",
+    "    raw_output: dict\n",
+    "\n",
+    "\n",
+    "class LangchainCodeInterpreterToolInput(BaseModel):\n",
+    "    code: str = Field(description=\"Python code to execute.\")\n",
+    "\n",
+    "\n",
+    "class CodeInterpreterFunctionTool:\n",
+    "    \"\"\"\n",
+    "    This class calls arbitrary code against a Python Jupyter notebook.\n",
+    "    It requires an E2B_API_KEY to create a sandbox.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    tool_name: str = \"code_interpreter\"\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        # Instantiate the E2B sandbox - this is a long lived object\n",
+    "        # that's pinging E2B cloud to keep the sandbox alive.\n",
+    "        if \"E2B_API_KEY\" not in os.environ:\n",
+    "            raise Exception(\n",
+    "                \"Code Interpreter tool called while E2B_API_KEY environment variable is not set. Please get your E2B api key here https://e2b.dev/docs and set the E2B_API_KEY environment variable.\"\n",
+    "            )\n",
+    "        self.code_interpreter = CodeInterpreter()\n",
+    "\n",
+    "    def close(self):\n",
+    "        self.code_interpreter.kill()\n",
+    "\n",
+    "    def call(self, parameters: dict, **kwargs: Any):\n",
+    "        code = parameters.get(\"code\", \"\")\n",
+    "        print(f\"***Code Interpreting...\\n{code}\\n====\")\n",
+    "        execution = self.code_interpreter.notebook.exec_cell(code)\n",
+    "        return {\n",
+    "            \"results\": execution.results,\n",
+    "            \"stdout\": execution.logs.stdout,\n",
+    "            \"stderr\": execution.logs.stderr,\n",
+    "            \"error\": execution.error,\n",
+    "        }\n",
+    "\n",
+    "    # langchain does not return a dict as a parameter, only a code string\n",
+    "    def langchain_call(self, code: str):\n",
+    "        return self.call({\"code\": code})\n",
+    "\n",
+    "    def to_langchain_tool(self) -> Tool:\n",
+    "        tool = Tool(\n",
+    "            name=self.tool_name,\n",
+    "            description=\"Execute python code in a Jupyter notebook cell and returns any rich data (eg charts), stdout, stderr, and error.\",\n",
+    "            func=self.langchain_call,\n",
+    "        )\n",
+    "        tool.args_schema = LangchainCodeInterpreterToolInput\n",
+    "        return tool\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def format_to_tool_message(\n",
+    "        tool_call_id: str,\n",
+    "        output: dict,\n",
+    "    ) -> RichToolMessage:\n",
+    "        \"\"\"\n",
+    "        Format the output of the CodeInterpreter tool to be returned as a RichToolMessage.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # TODO: Add info about the results for the LLM\n",
+    "        content = json.dumps(\n",
+    "            {k: v for k, v in output.items() if k not in (\"results\")}, indent=2\n",
+    "        )\n",
+    "\n",
+    "        return RichToolMessage(\n",
+    "            content=content,\n",
+    "            raw_output=output,\n",
+    "            tool_call_id=tool_call_id,\n",
+    "        )\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,7 +256,80 @@
      "output_type": "display_data"
     }
    ],
-   "source": ["from typing import List\nfrom langchain_openai import ChatOpenAI\nfrom langgraph.graph import END, MessageGraph\n\n\n# Define the function that determines whether to continue or not\ndef should_continue(messages) -> str:\n    last_message = messages[-1]\n    # If there is no function call, then we finish\n    if not last_message.tool_calls:\n        return END\n    else:\n        return \"action\"\n\n\n# Handle tools execution\ndef execute_tools(messages, tool_map) -> List[RichToolMessage]:\n    tool_messages = []\n    for tool_call in messages[-1].tool_calls:\n        tool = tool_map[tool_call[\"name\"]]\n        if tool_call[\"name\"] == CodeInterpreterFunctionTool.tool_name:\n            output = tool.invoke(tool_call[\"args\"])\n            message = CodeInterpreterFunctionTool.format_to_tool_message(\n                tool_call[\"id\"],\n                output,\n            )\n            tool_messages.append(message)\n        else:\n            content = tool.invoke(tool_call[\"args\"])\n            tool_messages.append(RichToolMessage(content, tool_call_id=tool_call[\"id\"]))\n    return tool_messages\n\n# 1. Pick your favorite llm\nllm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)\n\n# 2. Initialize the code interpreter tool\ncode_interpreter = CodeInterpreterFunctionTool()\ncode_interpreter_tool = code_interpreter.to_langchain_tool()\ntools = [code_interpreter_tool]\ntool_map = {tool.name: tool for tool in tools}\n\n# 3. Define the graph\nworkflow = MessageGraph()\nworkflow.add_node(\"agent\", llm.bind_tools(tools))\nworkflow.add_node(\"action\", lambda x: execute_tools(x, tool_map))\n\n# Conditional agent -> action OR agent -> END\nworkflow.add_conditional_edges(\n    \"agent\",\n    should_continue,\n)\n# Always transition `action` -> `agent`\nworkflow.add_edge(\"action\", \"agent\")\n\nworkflow.set_entry_point(\"agent\")\n\napp = workflow.compile()\n\n# 4. Invoke the app\nresult = app.invoke([(\"human\", \"plot and show sinus\")])\n\ncode_interpreter.kill()\n\ndef display_results(messages):\n    for message in result:\n        if hasattr(message, 'raw_output'):\n            if message.raw_output[\"results\"]:\n                rs = message.raw_output[\"results\"]\n                for r in rs:\n                    display(r)\n\ndisplay_results(result)"]
+   "source": [
+    "from typing import List\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langgraph.graph import END, MessageGraph\n",
+    "\n",
+    "\n",
+    "# Define the function that determines whether to continue or not\n",
+    "def should_continue(messages) -> str:\n",
+    "    last_message = messages[-1]\n",
+    "    # If there is no function call, then we finish\n",
+    "    if not last_message.tool_calls:\n",
+    "        return END\n",
+    "    else:\n",
+    "        return \"action\"\n",
+    "\n",
+    "\n",
+    "# Handle tools execution\n",
+    "def execute_tools(messages, tool_map) -> List[RichToolMessage]:\n",
+    "    tool_messages = []\n",
+    "    for tool_call in messages[-1].tool_calls:\n",
+    "        tool = tool_map[tool_call[\"name\"]]\n",
+    "        if tool_call[\"name\"] == CodeInterpreterFunctionTool.tool_name:\n",
+    "            output = tool.invoke(tool_call[\"args\"])\n",
+    "            message = CodeInterpreterFunctionTool.format_to_tool_message(\n",
+    "                tool_call[\"id\"],\n",
+    "                output,\n",
+    "            )\n",
+    "            tool_messages.append(message)\n",
+    "        else:\n",
+    "            content = tool.invoke(tool_call[\"args\"])\n",
+    "            tool_messages.append(RichToolMessage(content, tool_call_id=tool_call[\"id\"]))\n",
+    "    return tool_messages\n",
+    "\n",
+    "# 1. Pick your favorite llm\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)\n",
+    "\n",
+    "# 2. Initialize the code interpreter tool\n",
+    "code_interpreter = CodeInterpreterFunctionTool()\n",
+    "code_interpreter_tool = code_interpreter.to_langchain_tool()\n",
+    "tools = [code_interpreter_tool]\n",
+    "tool_map = {tool.name: tool for tool in tools}\n",
+    "\n",
+    "# 3. Define the graph\n",
+    "workflow = MessageGraph()\n",
+    "workflow.add_node(\"agent\", llm.bind_tools(tools))\n",
+    "workflow.add_node(\"action\", lambda x: execute_tools(x, tool_map))\n",
+    "\n",
+    "# Conditional agent -> action OR agent -> END\n",
+    "workflow.add_conditional_edges(\n",
+    "    \"agent\",\n",
+    "    should_continue,\n",
+    ")\n",
+    "# Always transition `action` -> `agent`\n",
+    "workflow.add_edge(\"action\", \"agent\")\n",
+    "\n",
+    "workflow.set_entry_point(\"agent\")\n",
+    "\n",
+    "app = workflow.compile()\n",
+    "\n",
+    "# 4. Invoke the app\n",
+    "result = app.invoke([(\"human\", \"plot and show sinus\")])\n",
+    "\n",
+    "code_interpreter.kill()\n",
+    "\n",
+    "def display_results(messages):\n",
+    "    for message in result:\n",
+    "        if hasattr(message, 'raw_output'):\n",
+    "            if message.raw_output[\"results\"]:\n",
+    "                rs = message.raw_output[\"results\"]\n",
+    "                for r in rs:\n",
+    "                    display(r)\n",
+    "\n",
+    "display_results(result)"
+   ]
   }
  ],
  "metadata": {
