--- a/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
+++ b/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
@@ -75,7 +75,9 @@
           ]
         }
       ],
-      "source": ["%pip install groq e2b_code_interpreter"]
+      "source": [
+        "%pip install groq e2b_code_interpreter"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -95,7 +97,62 @@
         "id": "NYAAAS_kFD87"
       },
       "outputs": [],
-      "source": ["# TODO: Get your Groq AI API key from https://console.groq.com/\nGROQ_API_KEY = \"\"\n\n# TODO: Get your E2B API key from https://e2b.dev/docs\nE2B_API_KEY = \"\"\n\n# Or use 8b version\n# MODEL_NAME = \"llama3-8b-8192\"\nMODEL_NAME = \"llama3-70b-8192\"\n\nSYSTEM_PROMPT = \"\"\"You're a python data scientist that is analyzing daily temperature of major cities. You are given tasks to complete and you run python code to solve them.\n\nInformation about the the temperature dataset:\n- It's in the `/home/user/city_temperature.csv` file\n- It has following columns (examples included):\n  - `Region`: \"North America\", \"Europe\"\n  - `Country`: \"Iceland\"\n  - `State`: for example \"Texas\" but can also be null\n  - `City`: \"Prague\"\n  - `Month`: \"June\"\n  - `Day`: 1-31\n  - `Year`: 2002\n  - `AvgTemperature`: temperature in celsiu, for example 24\n\nGenerally you follow these rules:\n- the python code runs in jupyter notebook.\n- every time you call `execute_python` tool, the python code is executed in a separate cell. it's okay to multiple calls to `execute_python`.\n- display visualizations using matplotlib or any other visualization library directly in the notebook. don't worry about saving the visualizations to a file.\n- you have access to the internet and can make api requests.\n- you also have access to the filesystem and can read/write files.\n- you can install any pip package (if it exists) if you need to but the usual packages for data analysis are already preinstalled.\n- you can run any python code you want, everything is running in a secure sandbox environment\n\"\"\"\n\n\ntools = [\n  {\n    \"type\": \"function\",\n      \"function\": {\n        \"name\": \"execute_python\",\n        \"description\": \"Execute python code in a Jupyter notebook cell and returns any result, stdout, stderr, display_data, and error.\",\n        \"parameters\": {\n          \"type\": \"object\",\n          \"properties\": {\n            \"code\": {\n              \"type\": \"string\",\n              \"description\": \"The python code to execute in a single cell.\",\n            }\n          },\n          \"required\": [\"code\"],\n        },\n      },\n  }\n]"]
+      "source": [
+        "# TODO: Get your Groq AI API key from https://console.groq.com/\n",
+        "GROQ_API_KEY = \"\"\n",
+        "\n",
+        "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
+        "E2B_API_KEY = \"\"\n",
+        "\n",
+        "# Or use 8b version\n",
+        "# MODEL_NAME = \"llama3-8b-8192\"\n",
+        "MODEL_NAME = \"llama3-70b-8192\"\n",
+        "\n",
+        "SYSTEM_PROMPT = \"\"\"You're a python data scientist that is analyzing daily temperature of major cities. You are given tasks to complete and you run python code to solve them.\n",
+        "\n",
+        "Information about the the temperature dataset:\n",
+        "- It's in the `/home/user/city_temperature.csv` file\n",
+        "- It has following columns (examples included):\n",
+        "  - `Region`: \"North America\", \"Europe\"\n",
+        "  - `Country`: \"Iceland\"\n",
+        "  - `State`: for example \"Texas\" but can also be null\n",
+        "  - `City`: \"Prague\"\n",
+        "  - `Month`: \"June\"\n",
+        "  - `Day`: 1-31\n",
+        "  - `Year`: 2002\n",
+        "  - `AvgTemperature`: temperature in celsiu, for example 24\n",
+        "\n",
+        "Generally you follow these rules:\n",
+        "- the python code runs in jupyter notebook.\n",
+        "- every time you call `execute_python` tool, the python code is executed in a separate cell. it's okay to multiple calls to `execute_python`.\n",
+        "- display visualizations using matplotlib or any other visualization library directly in the notebook. don't worry about saving the visualizations to a file.\n",
+        "- you have access to the internet and can make api requests.\n",
+        "- you also have access to the filesystem and can read/write files.\n",
+        "- you can install any pip package (if it exists) if you need to but the usual packages for data analysis are already preinstalled.\n",
+        "- you can run any python code you want, everything is running in a secure sandbox environment\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
+        "tools = [\n",
+        "  {\n",
+        "    \"type\": \"function\",\n",
+        "      \"function\": {\n",
+        "        \"name\": \"execute_python\",\n",
+        "        \"description\": \"Execute python code in a Jupyter notebook cell and returns any result, stdout, stderr, display_data, and error.\",\n",
+        "        \"parameters\": {\n",
+        "          \"type\": \"object\",\n",
+        "          \"properties\": {\n",
+        "            \"code\": {\n",
+        "              \"type\": \"string\",\n",
+        "              \"description\": \"The python code to execute in a single cell.\",\n",
+        "            }\n",
+        "          },\n",
+        "          \"required\": [\"code\"],\n",
+        "        },\n",
+        "      },\n",
+        "  }\n",
+        "]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -115,7 +172,22 @@
         "id": "BpiwOkTqEeBh"
       },
       "outputs": [],
-      "source": ["def code_interpret(e2b_code_interpreter, code):\n  print(\"Running code interpreter...\")\n  exec = e2b_code_interpreter.notebook.exec_cell(\n    code,\n    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n    # You can also stream code execution results\n    # on_result=...\n  )\n\n  if exec.error:\n    print(\"[Code Interpreter ERROR]\", exec.error)\n  else:\n    return exec.results"]
+      "source": [
+        "def code_interpret(e2b_code_interpreter, code):\n",
+        "  print(\"Running code interpreter...\")\n",
+        "  exec = e2b_code_interpreter.notebook.exec_cell(\n",
+        "    code,\n",
+        "    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
+        "    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n",
+        "    # You can also stream code execution results\n",
+        "    # on_result=...\n",
+        "  )\n",
+        "\n",
+        "  if exec.error:\n",
+        "    print(\"[Code Interpreter ERROR]\", exec.error)\n",
+        "  else:\n",
+        "    return exec.results"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -135,7 +207,47 @@
         "id": "IsLjFlRW_TAR"
       },
       "outputs": [],
-      "source": ["import os\nimport json\nimport re\nfrom groq import Groq\n\nclient = Groq(api_key=GROQ_API_KEY)\n\ndef chat_with_llama(e2b_code_interpreter, user_message):\n  print(f\"\\n{'='*50}\\nUser message: {user_message}\\n{'='*50}\")\n\n  messages = [\n      {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n      {\"role\": \"user\", \"content\": user_message}\n  ]\n\n  response = client.chat.completions.create(\n      model=MODEL_NAME,\n      messages=messages,\n      tools=tools,\n      tool_choice=\"auto\",\n      max_tokens=4096,\n  )\n\n  response_message = response.choices[0].message\n  tool_calls = response_message.tool_calls\n\n  if tool_calls:\n    for tool_call in tool_calls:\n      function_name = tool_call.function.name\n      function_args = json.loads(tool_call.function.arguments)\n      if function_name == \"execute_python\":\n        code = function_args[\"code\"]\n        code_interpreter_results = code_interpret(e2b_code_interpreter, code)\n        return code_interpreter_results\n      else:\n        raise Exception(f\"Unknown tool {function_name}\")\n  else:\n    print(f\"(No tool call in model's response) {response_message}\")\n    return []\n"]
+      "source": [
+        "import os\n",
+        "import json\n",
+        "import re\n",
+        "from groq import Groq\n",
+        "\n",
+        "client = Groq(api_key=GROQ_API_KEY)\n",
+        "\n",
+        "def chat_with_llama(e2b_code_interpreter, user_message):\n",
+        "  print(f\"\\n{'='*50}\\nUser message: {user_message}\\n{'='*50}\")\n",
+        "\n",
+        "  messages = [\n",
+        "      {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
+        "      {\"role\": \"user\", \"content\": user_message}\n",
+        "  ]\n",
+        "\n",
+        "  response = client.chat.completions.create(\n",
+        "      model=MODEL_NAME,\n",
+        "      messages=messages,\n",
+        "      tools=tools,\n",
+        "      tool_choice=\"auto\",\n",
+        "      max_tokens=4096,\n",
+        "  )\n",
+        "\n",
+        "  response_message = response.choices[0].message\n",
+        "  tool_calls = response_message.tool_calls\n",
+        "\n",
+        "  if tool_calls:\n",
+        "    for tool_call in tool_calls:\n",
+        "      function_name = tool_call.function.name\n",
+        "      function_args = json.loads(tool_call.function.arguments)\n",
+        "      if function_name == \"execute_python\":\n",
+        "        code = function_args[\"code\"]\n",
+        "        code_interpreter_results = code_interpret(e2b_code_interpreter, code)\n",
+        "        return code_interpreter_results\n",
+        "      else:\n",
+        "        raise Exception(f\"Unknown tool {function_name}\")\n",
+        "  else:\n",
+        "    print(f\"(No tool call in model's response) {response_message}\")\n",
+        "    return []\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -154,7 +266,13 @@
         "id": "f-CsLqcHQk5r"
       },
       "outputs": [],
-      "source": ["def upload_dataset(code_interpreter):\n  print(\"Uploading dataset to Code Interpreter sandbox...\")\n  with open(\"./city_temperature.csv\", \"rb\") as f:\n    remote_path = code_interpreter.files.write(f)\n  print(\"Uploaded at\", remote_path)"]
+      "source": [
+        "def upload_dataset(code_interpreter):\n",
+        "  print(\"Uploading dataset to Code Interpreter sandbox...\")\n",
+        "  with open(\"./city_temperature.csv\", \"rb\") as f:\n",
+        "    remote_path = code_interpreter.files.write(f)\n",
+        "  print(\"Uploaded at\", remote_path)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -208,7 +326,33 @@
           "output_type": "execute_result"
         }
       ],
-      "source": ["from e2b_code_interpreter import CodeInterpreter\n\n\nwith CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n\n  # Upload the dataset to the code interpreter sandbox\n  upload_dataset(code_interpreter)\n\n  code_results = chat_with_llama(\n    code_interpreter,\n    \"Plot average temperature over the years in Algeria\"\n  )\n  if code_results:\n    first_result = code_results[0]\n  else:\n    raise Exception(\"No code results\")\n\n\n# This will render the image\n# You can also access the data directly\n# first_result.png\n# first_result.jpg\n# first_result.pdf\n# ...\nfirst_result"]
+      "source": [
+        "from e2b_code_interpreter import CodeInterpreter\n",
+        "\n",
+        "\n",
+        "with CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n",
+        "\n",
+        "  # Upload the dataset to the code interpreter sandbox\n",
+        "  upload_dataset(code_interpreter)\n",
+        "\n",
+        "  code_results = chat_with_llama(\n",
+        "    code_interpreter,\n",
+        "    \"Plot average temperature over the years in Algeria\"\n",
+        "  )\n",
+        "  if code_results:\n",
+        "    first_result = code_results[0]\n",
+        "  else:\n",
+        "    raise Exception(\"No code results\")\n",
+        "\n",
+        "\n",
+        "# This will render the image\n",
+        "# You can also access the data directly\n",
+        "# first_result.png\n",
+        "# first_result.jpg\n",
+        "# first_result.pdf\n",
+        "# ...\n",
+        "first_result"
+      ]
     }
   ],
   "metadata": {
