--- a/examples/codestral-code-interpreter-python/codestral_code_interpreter.ipynb
+++ b/examples/codestral-code-interpreter-python/codestral_code_interpreter.ipynb
@@ -92,11 +92,15 @@
       },
       "outputs": [],
       "source": [
+        "import os\n",
+        "from dotenv import load_dotenv\n",
+        "load_dotenv()\n",
+        "\n",
         "# TODO: Get your Mistral API key from https://console.mistral.ai\n",
-        "MISTRAL_API_KEY = \"\"\n",
+        "MISTRAL_API_KEY = os.getenv(\"MISTRAL_API_KEY\")\n",
         "\n",
         "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
-        "E2B_API_KEY = \"\"\n",
+        "E2B_API_KEY = os.getenv(\"E2B_API_KEY\")\n",
         "\n",
         "MODEL_NAME = \"codestral-latest\"\n",
         "\n",
