--- a/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
+++ b/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
@@ -98,11 +98,15 @@
       },
       "outputs": [],
       "source": [
+        "import os\n",
+        "from dotenv import load_dotenv\n",
+        "load_dotenv()\n",
+        "\n",
         "# TODO: Get your Groq AI API key from https://console.groq.com/\n",
-        "GROQ_API_KEY = \"\"\n",
+        "GROQ_API_KEY = os.getenv(\"GROQ_API_KEY\")\n",
         "\n",
         "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
-        "E2B_API_KEY = \"\"\n",
+        "E2B_API_KEY = os.getenv(\"E2B_API_KEY\")\n",
         "\n",
         "# Or use 8b version\n",
         "# MODEL_NAME = \"llama3-8b-8192\"\n",
